--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,6 +1,3 @@
-
-/* font-family: 'Orelega One', cursive; */
-
 /* UNIVERSAL STYLES */
 
 * { 
@@ -10,6 +7,7 @@ box-sizing: border-box;
 html {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
+    font-weight: 300;
 }
 
 main {
@@ -20,18 +18,17 @@ main {
 h1 {
     text-transform: uppercase;
     font-size: 1.65rem;
-    font-weight: 300;
 }
 
 h2 {
     font-size: 3rem;
-    font-family: 'Orelega One', cursive;
+    font-family: 'Dela Gothic One', cursive;
     margin-bottom: 1rem;
 }
 
 h3 {
-    font-size: 1.5rem;
-    font-family: 'Orelega One', cursive;
+    font-size: 2rem;
+    font-family: 'Dela Gothic One', cursive;
     text-align: center;
 }
 
@@ -42,15 +39,28 @@ h4 {
 
 p {
     font-size: 1rem;
-    font-weight: 300;
     line-height: 1.2;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (min-width: 850px) {
+    .mobile {
+      display: none;
+    }
+}
+
+@media only screen and (max-width: 850px) {
     .desktop {
       display: none;
     }
-  }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+    
+    h3 {
+        font-size: 1.75rem;
+    }
+}
 
 /* HEADER */
 
@@ -78,10 +88,22 @@ header nav ul {
 }
 
 nav a {
-    padding-left: 1rem;
+    font-family: 'Dela Gothic One', cursive;
+    padding-left: 1.75rem;
     text-decoration: none;
     color: black;
     vertical-align: bottom;
+}
+
+/* HEADER MOBILE */
+
+@media only screen and (max-width: 850px) {
+    header .mobile {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 }
 
 /* BANNER */
@@ -89,7 +111,7 @@ nav a {
 .banner {
     display: flex;
     padding: 2rem 1.5rem;
-    background-color: lightgray;
+    background-color: rgb(255, 251, 213);
 }
 
 .banner img {
@@ -104,11 +126,12 @@ nav a {
     max-width: 40%;
     padding-right: 4rem;
     line-height: 1.2;
+    min-width: 21.5rem;
 }
 
 .button {
-    background-color: darkgrey;
-    color: white;
+    background-color: rgb(255, 217, 0);
+    color: rgb(83, 83, 83);
     margin-top: 1rem;
     margin-bottom: 1rem;
     padding-top: 0.5rem;
@@ -116,6 +139,34 @@ nav a {
     text-decoration: none;
     text-align: center;
     max-width: 80%;
+    font-family: 'Dela Gothic One', cursive;
+    text-transform: uppercase;
+}
+
+/* BANNER MOBILE */
+
+@media only screen and (max-width: 850px) {
+    .banner {
+        flex-direction: column;
+        padding: 0rem;
+        justify-content: center;
+    }
+
+    .banner img {
+        max-width: 100%;
+        margin: 0;
+    }
+
+    .banner-text {
+        max-width: 100%;
+        padding: 1rem;
+    }
+
+    .button {
+        max-width: 100%;
+        margin-top: 1.5rem;
+        margin-bottom: 2rem;
+    }
 }
 
 /* PRACTICE */
@@ -154,16 +205,16 @@ nav a {
 
 .practice-sidepanel .panel {
     display: flex;
-    border-left: 1px lightgray solid;
-    min-width: 26.5rem;
+    border-left: 1px rgb(215, 233, 255) solid;
+    min-width: 21.5rem;
 }
 
 .practice-sidepanel .orientation {
-    border-bottom: 1px lightgray solid;
+    border-bottom: 1px rgb(215, 233, 255) solid;
 }
 
 .practice-sidepanel .guestlecture {
-    background-color: rgb(210, 210, 210);
+    background-color: rgb(215, 233, 255);
 }
 
 .practice-sidepanel img {
@@ -184,8 +235,40 @@ nav a {
 }
 
 .practice-sidepanel a {
-    color: cornflowerblue;
+    color: rgb(81, 135, 235);
     text-decoration: none;
+    font-weight: 400;
+}
+
+/* PRACTICE SIDEPANEL MOBILE */
+
+@media only screen and (max-width: 850px) {
+    .practice-sidepanel {
+        max-width: 100%;
+    }
+
+    .practice-sidepanel .panel {
+        flex-direction: column;
+        border: none;
+    }
+
+    .practice-sidepanel img {
+        max-width: 100%;
+        height: auto;
+        padding: 0;
+    }
+
+    .practice-sidepanel .panel-text {
+        padding: 1rem;
+    }
+
+    .practice-sidepanel .orientation {
+        border: none;
+    }
+    
+    .practice-sidepanel .guestlecture {
+        background-color: white;
+    }
 }
 
 /* COURSES */
@@ -193,7 +276,7 @@ nav a {
 .courses {
     padding-top: 2rem;
     padding-bottom: 2rem;
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(255, 251, 213)
 }
 
 .courses-content {
@@ -222,6 +305,25 @@ nav a {
     margin: 1rem;
 }
 
+/* COURSES MOBILE */
+
+@media only screen and (max-width: 850px) {
+    .courses .content {
+        flex-basis: 100%;
+        max-width: 100%;
+        padding: 0.75rem;
+        margin-right: 1rem;
+        margin-bottom: 0.5rem;
+        background-color: rgb(255, 217, 0);
+    }
+
+    .courses-content {
+        margin-left: 0;
+        margin-right: 0;
+        justify-content: center;
+    }
+}
+
 /* THESIS  */
 
 .thesis {
@@ -248,10 +350,30 @@ nav a {
     padding-bottom: 1rem;
 }
 
+/* THESIS MOBILE */
+
+@media only screen and (max-width: 850px) {
+    .thesis-video {
+        max-width: 100%;
+        margin-right: 0rem;
+    }
+
+    .thesis-content {
+        display: flex;
+        padding: 1.5rem 0;
+    }
+
+    .thesis-video video {
+        padding-bottom: 0;
+    }
+}
+
 /* THESIS SIDEPANEL */
 
 .thesis-sidepanel .panel {
     display: flex;
+    min-width: 21.5rem;
+    border-left: 1px rgb(215, 233, 255) solid;
 }
 
 .thesis-sidepanel img {
@@ -263,8 +385,7 @@ nav a {
 } 
 
 .thesis-sidepanel .fisma {
-    background-color: rgb(210, 210, 210);
-    min-width: 26.5rem;
+    background-color: rgb(215, 233, 255);
 }
 
 .thesis-sidepanel .panel-text {
@@ -281,9 +402,14 @@ nav a {
 
 footer {
     display: flex;
-    border-top: 1px solid lightgray;
+    border-top: 1px solid rgb(215, 233, 255);
+    /* background-color: rgb(215, 233, 255); */
     padding: 1.5rem;
     justify-content: space-between; 
+}
+
+footer p, footer a {
+    font-size: 0.85rem;
 }
 
 footer a {
