Change mobile layout CSS

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -244,6 +244,7 @@ nav a {
 
 @media only screen and (max-width: 850px) {
     .practice-sidepanel {
+        display: flex;
         max-width: 100%;
     }
 
