--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -95,6 +95,16 @@ nav a {
     vertical-align: bottom;
 }
 
+nav a:hover {
+    color: rgb(255, 217, 0);
+    letter-spacing: 0.2rem;
+    transition: color 0.35s, letter-spacing 0.45s;
+}
+
+nav a:active {
+    color: rgb(255, 251, 213);
+}
+
 /* HEADER MOBILE */
 
 @media only screen and (max-width: 850px) {
@@ -141,6 +151,19 @@ nav a {
     max-width: 80%;
     font-family: 'Dela Gothic One', cursive;
     text-transform: uppercase;
+}
+
+a.button:hover {
+    background-color: rgb(255, 251, 213);
+    border: 1px solid rgb(228, 186, 0);
+    color: rgb(61, 61, 61);
+    letter-spacing: 0.2rem;
+    transition: color 0.35s, background-color 0.35s, letter-spacing 0.5s, border 0.35s;
+}
+
+a.button:active {
+    background-color: rgb(228, 186, 0);
+    
 }
 
 /* BANNER MOBILE */
@@ -240,27 +263,42 @@ nav a {
     font-weight: 400;
 }
 
+.practice-sidepanel a:hover {
+    letter-spacing: 0.2rem;
+    transition: letter-spacing 0.45s;
+}
+
+.practice-sidepanel a:active {
+    color: rgb(30, 73, 212);
+    transition: color 0.35s, letter-spacing 0.45s;
+}
+
 /* PRACTICE SIDEPANEL MOBILE */
 
 @media only screen and (max-width: 850px) {
+    section.practice {
+        justify-content: center;
+    }
+
     .practice-sidepanel {
-        display: flex;
         max-width: 100%;
     }
 
     .practice-sidepanel .panel {
         flex-direction: column;
+        justify-content: flex-end;
         border: none;
     }
 
     .practice-sidepanel img {
-        max-width: 100%;
+        min-width: 100%;
         height: auto;
         padding: 0;
     }
 
     .practice-sidepanel .panel-text {
         padding: 1rem;
+        margin-bottom: 1rem;
     }
 
     .practice-sidepanel .orientation {
